--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
 .container{
     background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-content: stretch;
+    padding: 20px;
+}
 
+.image-container{
+    width: 150px;
+    height: 70;
+}
+
+.logo {
+    width: 150px;
+    height: 70px;
+}
+.hamburguer{
+    width: 50px;    
 }
