--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
 .container{
     background-color: black;
     display: flex;
-    justify-content: space-between;
-    align-content: stretch;
+    justify-content: space-between; 
     padding: 20px;
 }
+.cuerpo{
+  background-color: cornflowerblue; 
+}
 
+h1{
+    margin-top: 0;
+}
 .image-container{
-    width: 150px;
-    height: 70;
+    width:150px;
+    height:50px;
 }
 
 .logo {
-    width: 150px;
-    height: 70px;
+    width:150px;
+    height:50px;
 }
 .hamburguer{
     width: 50px;    
