--- a/style.css
+++ b/style.css
@@ -5,39 +5,54 @@
 .hamburguer{
     width: 50px;    
 }
-.image-container{
-    width:150px;
-    height:50px;
-}
+
 .container{
     background-color: black;
     display: flex;
     justify-content: space-between; 
     padding: 20px;
+    
 }
 
 .cuerpo{
   background-color: cornflowerblue; 
- 
+  margin: 
+
   
 }
+
+body{
+margin: 0;
+
+}
+
 button{
     border-radius: 20px;
     background-color: rgb(76, 204, 76);
-    color: white;
     border: none;
+    color: white;   
+    font-size: 10px; 
     width: 100%;
+    padding: 7px;
+       
+    
+   
+
 }
 
 h1{
     margin-top: 0;
     color: white;
-       l
-  
+    padding-top: 50px;
+    padding-left: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+       
 }
 
 h3{
     color: white;
+    padding-left: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 p{
