--- a/style.css
+++ b/style.css
@@ -16,9 +16,7 @@
 
 .cuerpo{
   background-color: cornflowerblue; 
-  margin: 
-
-  
+  margin:0                    
 }
 
 body{
@@ -32,12 +30,9 @@ button{
     border: none;
     color: white;   
     font-size: 10px; 
-    width: 100%;
+    width: 80%;
     padding: 7px;
-       
-    
-   
-
+    align-content: center;
 }
 h1{
     margin-top: 0;
@@ -61,3 +56,8 @@ p{
 h6{
     color: white;
 }
+@media(max-width:480px){
+
+
+}
+    
