--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+margin: 0;
+
+}
+
 .logo {
     width:150px;
     height:50px;
@@ -6,22 +11,22 @@
     width: 50px;    
 }
 
-.container{
+.links{
+    display: none;
+    color:white;
+}
+
+.header-container{
     background-color: black;
     display: flex;
     justify-content: space-between; 
-    padding: 20px;
-    
+    padding: 20px;  
 }
+
 
 .cuerpo{
   background-color: cornflowerblue; 
   margin:0                    
-}
-
-body{
-margin: 0;
-
 }
 
 button{
@@ -30,20 +35,14 @@ button{
     border: none;
     color: white;   
     font-size: 10px; 
-    width: 80%;
+    width: 100%;
     padding: 7px;
-<<<<<<< HEAD
-    margin-inline-start: 10px;
-    margin-inline-end: 10px;
-    margin-right: 20px;
-       
+    margin-left: 20px;
     
+ 
    
-
-=======
-    align-content: center;
->>>>>>> c135d2e5330207d1d16998108dc44138c42b3677
 }
+
 h1{
     margin-top: 0;
     color: white;
@@ -52,6 +51,11 @@ h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
        
 }
+h2{
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
+}
+
 
 h3{
     color: white;
@@ -59,25 +63,21 @@ h3{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-p{
-    color: white;
-}
-
 h6{
-    
-    color: white;
-<<<<<<< HEAD
-    padding-bottom:  30px;
-    padding-left: 10px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-       
+        color: white;
+        padding: 20px;
+        padding-left: 10px;
 }
+
+.container{
+    text-align: center;
 }
-=======
-}
-@media(max-width:480px){
+@media(min-width:736px)
+.links{
+    display:flex;
+    gap:20px}
 
 
 }
+
     
->>>>>>> c135d2e5330207d1d16998108dc44138c42b3677
